# projects

hn-pulse/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
hn-pulse/.github/workflows/: ci.yml
hn-pulse/hn_pulse/: __init__.py  api.py  config.py  dashboard.py  etl.py  features.py  hn_client.py  io.py  model.py
hn-pulse/hn_pulse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hn-pulse/scripts/: build_analytics.py  ingest.py  run_all.sh  serve_api.sh  serve_ui.sh  train.py
hn-pulse/tests/: test_smoke.py
