[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hn-pulse"
version = "0.1.0"
description = "Hacker News trends analytics + ML with DuckDB, FastAPI, Streamlit"
authors = [{ name = "HN Pulse" }]
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools]
packages = ["hn_pulse", "scripts"]